--- a/s/bio.html
+++ b/s/bio.html
@@ -44,13 +44,13 @@
 <p>
 hi, im jamer<br>
 he/him<br>
-i like editing images (i know a bit)<br>
+i like making thumbnails (i know a bit)<br>
 
 <h1>\/ questions \/</h1>
 
 <h2>"what do you use to edit images?"</h2>
 
-i use <a href="https://photopea.com">photopea</a> for all my edited images</p>
+i use <a href="https://photopea.com">photopea</a> for all my thumbnails</p>
 
 <h2>"what games do you play?"</h2>
 
