--- a/s/bio.html
+++ b/s/bio.html
@@ -45,6 +45,7 @@
 hi, im jamer<br>
 he/him<br>
 i like making thumbnails (i know a bit)<br>
+if you want to contact me my discord username is jamerchgit (i do commissions)<br>
 
 <h1>\/ questions \/</h1>
 
