--- a/s/bio.html
+++ b/s/bio.html
@@ -55,7 +55,10 @@ i use <a href="https://photopea.com">photopea</a> for all my thumbnails</p>
 
 <h2>"what games do you play?"</h2>
 
-steam games and roblox
+steam games and roblox<br>
+<br>
+<br>
+click <a href="https://jamer.xyz">here</a> to go back to main page
 
 <script>
     const toggle = document.getElementById("darkModeToggle");
